[package]
name = "rust-crate-acme-everything"
version = "0.1.0"
authors = ["ncaq <ncaq@ncaq.net>"]
edition = "2018"
repository = "https://github.com/ncaq/rust-crate-acme-everything"

[profile.dev]
opt-level = 0
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
incremental = true
overflow-checks = false

[dependencies]
